--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+body{
+  font-family:Arial, Helvetica, sans-serif;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
