--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -6,3 +6,9 @@
 .taskList .header {
   padding-left: 10px;
 }
+@media only screen and (max-width: 667px) {
+  .taskList{
+    width: 100%;
+    margin: 5px;
+  }
+}
