--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  padding-top: 20px;
   text-align: center;
 }
 body{
@@ -6,7 +7,7 @@ body{
 }
 .App-header {
   background-color: #282c34;
-  min-height: 95vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
