--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -6,6 +6,20 @@
 .taskList .header {
   padding-left: 10px;
 }
+.exportToClipboard {
+  border: 1px solid black;
+  background-color: gray;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+.exportToClipboard:hover {
+  background-color: darkgray;
+}
+.exportToClipboard:active {
+  background-color: black;
+  color: white;
+}
 @media only screen and (max-width: 667px) {
   .taskList{
     width: 100%;
