--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  padding-top: 20px;
   text-align: center;
 }
 body{
@@ -7,7 +6,9 @@ body{
 }
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,3 +17,9 @@ body{
   color: white;
 }
 
+@media only screen and (max-width: 825px) {
+  .App {
+    padding: 50px 0 0 0;
+    box-sizing: border-box;
+  }
+}
