--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body{
 }
 .App-header {
   background-color: #282c34;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   display: flex;
