--- a/src/components/ListItem/ListItem.css
+++ b/src/components/ListItem/ListItem.css
@@ -6,6 +6,9 @@
   margin: 150px;
   padding: 15px;
 }
+.darker {
+  background-color: #4f834f !important;
+}
 .listItem .task, .listItem .delete, .listItem .date {
   width: 300px;
   height: 50px;
@@ -32,6 +35,7 @@
 }
 .delete .buttonDelete:hover {
   background: black;
+  cursor:pointer;
 }
 @media only screen and (max-width: 667px) {
   .listItem .date, .listItem .task, .listItem .delete{
