--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,9 @@
 .App {
   text-align: center;
-}
-body{
-  font-family:Arial, Helvetica, sans-serif;
-}
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   margin: 0;
-  padding: 0;
+  padding: 60px, 0, 0, 0; 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,10 +11,32 @@ body{
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.App h2 {
+  font-size: calc(35px + 2vmin);
+}
+body{
+  font-family:Arial, Helvetica, sans-serif;
+}
+/* .App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  margin: 0;
+  padding: 40px, 0, 0, 0; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+} */
+@media only screen and (max-height: 820px) {
+  .App{
+    padding: 60px 0 0 0;
+  }
+}
 @media only screen and (max-width: 825px) {
   .App {
-    padding: 50px 0 0 0;
+    padding: 90px 0 0 0;
     box-sizing: border-box;
   }
 }
