Improvements to UI in transition to MERN

--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -17,7 +17,7 @@ form {
 .signInSignUp {
   font-size: 12px;
   cursor: pointer;
-  color: cyan;
+  color: black;
 }
 .formButton {
   width: 110px;
